# vision-metrology

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.agents/skills/api-shaping/: SKILL.md
.agents/skills/metrology-invariants/: SKILL.md
.agents/skills/tests-synthetic-fixtures/: SKILL.md
.claude/skills/criterion-bench/: SKILL.md
.claude/skills/hotpath-rust/: SKILL.md
.claude/skills/laser-extract/: SKILL.md
.github/workflows/: audit.yml  ci.yml  publish-docs.yml
crates/vision-metrology/: Cargo.toml
crates/vision-metrology/examples/: laserline.rs
crates/vision-metrology/src/: lib.rs
crates/vm-contour/: Cargo.toml
crates/vm-contour/benches/: build_graph.rs
crates/vm-contour/src/: build.rs  graph.rs  lib.rs
crates/vm-core/: Cargo.toml
crates/vm-core/src/: border.rs  error.rs  geom.rs  image.rs  lib.rs  sample.rs
crates/vm-edge/: Cargo.toml
crates/vm-edge/benches/: edge2d.rs
crates/vm-edge/src/: conv1d.rs  edge1d.rs  edge2d.rs  kernels1d.rs  laser1d.rs  lib.rs
crates/vm-gallery/: Cargo.toml
crates/vm-laser/: Cargo.toml
crates/vm-laser/benches/: extract.rs
crates/vm-laser/src/: extractor.rs  lib.rs
crates/vm-morph/: Cargo.toml
crates/vm-morph/src/: lib.rs
crates/vm-pyr/: Cargo.toml
crates/vm-pyr/benches/: downsample.rs
crates/vm-pyr/src/: downsample.rs  lib.rs  pyramid.rs
docs/: FIGURES.md
tools/: laser_overlay.py
tools/figures/: README.md  generate_all.py
tools/figures/figgen/: __init__.py  common.py  config.py  contour_fig.py  edge1d_fig.py  edge2d_fig.py  gallery.py  laser_fig.py  morphology_fig.py  plot.py  pyramid_fig.py
tools/fixtures/: README.md  gen_fixtures.py
tools/gallery/: README.md  run_all.py  show_figures.py
