[workspace]
members = [
  "crates/vm-contour",
  "crates/vm-gallery",
  "crates/vm-core",
  "crates/vm-edge",
  "crates/vm-laser",
  "crates/vm-morph",
  "crates/vm-pyr",
  "crates/vision-metrology",
]
resolver = "3"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
