[package]
name = "vision-metrology"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Industrial machine-vision metrology library"

[dependencies]
vm-contour = { path = "../vm-contour" }
vm-core = { path = "../vm-core" }
vm-edge = { path = "../vm-edge" }
vm-laser = { path = "../vm-laser" }
vm-pyr = { path = "../vm-pyr" }

[lints]
workspace = true
