[package]
name = "vm-edge"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Fast 1D subpixel edge extraction for metrology and laser profiles"

[dependencies]
vm-core = { path = "../vm-core" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "edge2d"
harness = false

[lints]
workspace = true
